--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.0",
     "stripe": "^15.2.0",
     "validator": "^13.11.0"
